--- a/style.css
+++ b/style.css
@@ -1,51 +1,108 @@
 * {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    text-align: left;   
-    margin-top: 3%;
-    margin-left: 3%;
+  font-family: 'Cormorant SC', serif;
+  padding: 3% 3%;
+  background-image: url(./Background/5.jpeg); 
+  background-size: cover; 
+  color: #333333;
 }
 
 h1 {
     font-size: 40px;
+    margin: 0;
+    color: #1e50ee;
   }
   
-  h2 {
-    font-size: 25px;
-  }
-  
-  form {
-    font-size: 20px;
-  }
-
-  form h2 {
-    padding: 1% 2.5%;
-  }
-
-  input[type=checkbox] {
-  /* Double-sized Checkboxes */
-  -ms-transform: scale(2); /* IE */
-  -moz-transform: scale(2); /* FF */
-  -webkit-transform: scale(2); /* Safari and Chrome */
-  -o-transform: scale(2); /* Opera */
-  transform: scale(2);
-  padding: 10px;
+  .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: stretch;
+    margin-top: 1%;
+    background-color: rgba(255,255,255, 0.1);
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    width: 100%;
+    border-radius: 10px;
 }
 
-/* Might want to wrap a span around your checkbox text */
-.checkboxtext {
-  /* Checkbox text */
-  display: inline;
+  h2 {
+    font-size: 25px;
+    padding: 2% 0;
+    text-align: center;
+    color: #1e50ee;
+    background-color: rgba(230,230,230, 0.5);
+  }
+  
+
+.section {
+  padding: 2%;
+  width: 30%;
+}
+
+  form {
+    font-size: 20px;
+    padding: 2% 5%;
+    background-color: rgba(230,230,230, 0.5);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+
+  .checkbox-container {
+    display: flex;
+    align-items: center;
+    text-align: left;
+    margin-bottom: 5px;
+    border: 2px dotted #ffffff; 
+    border-radius: 10px;
+    
+}
+
+.checkbox-container:hover {
+  color: #1e50ee;
+}
+
+
+  input[type=checkbox] {
+  /* 1.5-sized Checkboxes */
+  -ms-transform: scale(1.5); /* IE */
+  -moz-transform: scale(1.5); /* FF */
+  -webkit-transform: scale(1.5); /* Safari and Chrome */
+  -o-transform: scale(1.5); /* Opera */
+  transform: scale(1.5);
+  padding: 10px;
+  color: #888888;
 }
 
 
   label {
-    margin: 1%;
     font-size: 20px;
+    display: inline-block;
+    width: 80%;
+    /* white-space: nowrap; Prevents text from wrapping to the next line */
+    word-wrap: break-word; /* Allows the text to wrap to the next line if it exceeds the width */
+    overflow: hidden;
+    text-overflow: ellipsis; /* Truncates the text with an ellipsis if it overflows */
+    margin-left: 2%;
   }
 
 input[type=checkbox]:checked + label.strikethrough {
   text-decoration: line-through; 
 }
+
+@media only screen and (min-width: 500px) and (max-width: 800px) {
+.section {
+  width: 45%;
+}
+}
+
+@media only screen and (max-width: 499px) {
+  .section {
+    width: 90%;
+  }
+  }
